--- a/package.json
+++ b/package.json
@@ -9,14 +9,15 @@
     "dist"
   ],
   "license": "MIT",
-  "scripts": {},
   "keywords": [
     "chatbot",
     "koishi",
     "plugin"
   ],
-  "devDependencies": {},
   "peerDependencies": {
     "koishi": "^4.17.9"
+  },
+  "dependencies": {
+    "rcon-ts": "^1.2.3"
   }
 }
