--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "koishi-plugin-minecraft-rcon-command-remake",
   "description": "minecraft-rcon-command插件的重制版，通过rcon实现查看在线人数，添加白名单等功能",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
   "repository": {
@@ -26,5 +26,6 @@
   "dependencies": {
     "@satorijs/element": "^3.1.7",
     "rcon-ts": "^1.2.3"
-  }
+  },
+  "packageManager": "yarn@4.5.3+sha512.3003a14012e2987072d244c720506549c1aab73ee728208f1b2580a9fd67b92d61ba6b08fe93f6dce68fd771e3af1e59a0afa28dd242dd0940d73b95fedd4e90"
 }
